Proljepsavanje dokumentacije i komentara uglavnom

--- a/fancy.css
+++ b/fancy.css
@@ -1,6 +1,8 @@
 /**
  * CSS kod dizajna stranice.
+ *
  * @author Davor Penzar <davor.penzar@gmail.com>
  * @version 1.0
  * @package glagol
+ *
  */
